@@ -1,5 +1,14 @@
 2018-08-16  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* trad-frame.h (trad_frame_set_realreg): Declare.
+	(trad_frame_set_addr): Declare.
+	* trad-frame.c (trad_frame_set_realreg): Define new function.
+	(trad_frame_set_addr): Define new function.
+	(trad_frame_set_reg_realreg): Use new function.
+	(trad_frame_set_reg_addr): Use new function.
+
+2018-08-16  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* riscv-tdep.c (riscv_insn::decode): Decode c.addi4spn, c.sd,
 	c.sw, c.swsp, and c.sdsp.
 
